<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SYSU</string>
    <string name="app_name1">SYSU助手</string>
    <string name="des">Picture contentDescription</string>

    <!-- -登录界面 -->
    <string name="student_id">学号</string>
    <string name="student_password">教务系统密码</string>
    <string name="input_checksum">输入验证码</string>
    <string name="wrong_password">密码错误</string>
    <string name="login">登录</string>

    <!-- -用户信息界面 -->
    <string name="welcome1">欢迎，陈诗伟</string>
    <string name="welcome2">13354000\n移动信息工程学院</string>
    <string name="query">查询</string>
    <string name="my_class">我的课表</string>
    <string name="my_score">我的成绩</string>
    <string name="choice">选课</string>

    <!-- -查询界面 -->
    <string name="query_class">课表查询</string>
    <string name="query_score">成绩查询</string>

    <!-- -成绩界面 -->
    <!-- -课表界面 -->
    <string name="class_time">学年</string>
    <string name="class_look">查看</string>
    <string name="class_name">课程名称</string>
    <string name="class_teacher">教师</string>
    <string name="class_credit">学分</string>
    <string name="class_point">绩点</string>
    <string name="class_score">分数</string>
    <string name="space">00</string>
    <string name="week1">星期一</string>
    <string name="week2">星期二</string>
    <string name="week3">星期三</string>
    <string name="week4">星期四</string>
    <string name="week5">星期五</string>
    <string name="week6">星期六</string>
    <string name="week7">星期七</string>

    <!-- -选课界面 -->
    <string name="choice_available">可选课程查询</string>
    <string name="choice_category">课程类别</string>
    <string name="choice_look">查看</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
