<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/class_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:text="@string/class_name" />
    
    <TextView 
        android:id="@+id/class_teacher"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="@string/class_teacher" />
    
    <TextView 
        android:id="@+id/class_credit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/class_credit" />
    
    <TextView 
        android:id="@+id/class_point"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/class_point" />
    
    <TextView 
        android:id="@+id/class_score"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/class_score" />

</LinearLayout>
