<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/button_shape3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name1" 
        android:textColor="#ffffff"
        android:textSize="30sp"/>
    
	<ImageView
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/class_background"
        />
	
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal" 
        android:layout_marginTop="20dp"
        >
	<EditText
	    android:layout_marginTop="10dp"
        android:id="@+id/student_id"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/student_id"/>
	
	
	<EditText
        android:id="@+id/student_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/student_password"/>
	
	<EditText
        android:id="@+id/student_check"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/input_checksum"/>
   	
    <ImageView
        android:id="@+id/login_checkPic"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/log_pic"
        android:contentDescription="@string/input_checksum" />
         
	</LinearLayout>
	
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
        <Button
            android:id="@+id/btn_log"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/login"
            android:textColor="#ffffff"/>

    </LinearLayout>

</LinearLayout>
